[package]
name = "reqwest-client-gpui-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/iamnbutler/gpui-unofficial"
description = "Unofficial release of Zed's reqwest_client crate"

[features]
test-support = []

[lib]
path = "src/reqwest_client.rs"
doctest = true

[dependencies]
anyhow = { version = "1.0.86" }
bytes = { version = "1.0" }
futures = { version = "0.3" }
http_client = { package = "http-client-gpui-unofficial", version = "0.230.1" }
serde = { version = "1.0.221", features = ["derive", "rc"] }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
regex = { version = "1.5" }
reqwest = { version = "0.12.15-zed", package = "zed-reqwest", git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream"] }
gpui_util = { package = "gpui-util-gpui-unofficial", version = "0.230.1" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
http_client_tls = { package = "http-client-tls-gpui-unofficial", version = "0.230.1" }

[dev-dependencies]

[workspace]
