[package]
name = "sum-tree-gpui-unofficial"
version = "0.231.1"
edition = "2024"
license = "Apache-2.0"
description = "A sum tree data structure, a concurrency-friendly B-tree"
repository = "https://github.com/iamnbutler/gpui-unofficial"

[lib]
path = "src/sum_tree.rs"
doctest = false

[dependencies]
heapless = { version = "0.9.2" }
rayon = { version = "1.8" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
ztracing = { package = "ztracing-gpui-unofficial", version = "0.231.1" }
tracing = { version = "0.1.40" }

[dev-dependencies]
ctor = { version = "0.4.0" }
rand = { version = "0.9" }
zlog = { package = "zlog-gpui-unofficial", version = "0.231.1" }


[package.metadata.cargo-machete]
ignored = ["tracing"]

[features]
test-support = []

[workspace]
