[package]
name = "sum-tree-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
description = "A sum tree data structure, a concurrency-friendly B-tree"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/sum_tree.rs"
doctest = false

[dependencies]
heapless = { version = "0.9.2" }
rayon = { version = "1.8" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
ztracing = { package = "ztracing-unofficial", version = "0.230.1" }
tracing = { version = "0.1.40" }
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"], optional = true }

[dev-dependencies]
ctor = { version = "0.4.0" }
rand = { version = "0.9" }
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
zlog = { package = "zlog-unofficial", version = "0.230.1" }


[package.metadata.cargo-machete]
ignored = ["tracing"]

[features]
test-support = ["proptest"]

[workspace]
