[package]
name = "util-macros-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
description = "Utility macros for Zed"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/util_macros.rs"
proc-macro = true
doctest = false

[dependencies]
quote = { version = "1.0.9" }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
perf = { package = "perf-unofficial", version = "0.230.1" }

[features]
perf-enabled = []

[workspace]
