[package]
name = "util-unofficial"
version = "0.230.1"
edition = "2024"
license = "Apache-2.0"
description = "A collection of utility structs and functions used by Zed and GPUI"
repository = "https://github.com/gpui-unofficial/gpui-unofficial"

[lib]
path = "src/util.rs"
doctest = true

[features]
test-support = ["git2", "rand", "util_macros"]

[dependencies]
anyhow = { version = "1.0.86" }
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
collections = { package = "collections-unofficial", version = "0.230.1" }
dunce = { version = "1.0" }
futures-lite = { version = "1.13" }
futures = { version = "0.3" }
globset = { version = "0.4" }
itertools = { version = "0.14.0" }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
rand = { version = "0.9", optional = true }
regex = { version = "1.5" }
rust-embed = { version = "8.4", features = ["include-exclude"] }
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value"] }
shlex = { version = "1.3.0" }
take-until = { version = "0.2.0" }
tempfile = { version = "3.20.0" }
unicase = { version = "2.6" }
url = { version = "2.2" }
percent-encoding = { version = "2.3.2" }
util_macros = { package = "util-macros-unofficial", version = "0.230.1", optional = true }
gpui_util = { package = "gpui-util-unofficial", version = "0.230.1" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
smol = { version = "2.0" }
which = { version = "6.0.0" }
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"], optional = true }
async-fs = { version = "2.1" }
walkdir = { version = "2.5" }
dirs = { version = "4.0" }

[target.'cfg(unix)'.dependencies]
command-fds = "0.3.1"
libc = { version = "0.2" }
nix = { version = "0.29", features = ["user"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = { version = "0.5" }

[target.'cfg(windows)'.dependencies]
tendril = "0.4.3"

[dev-dependencies]
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
rand = { version = "0.9" }
util_macros = { package = "util-macros-unofficial", version = "0.230.1" }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }

[workspace]
